fix: make spacing on post-meta consistent

--- a/src/styles/website.css
+++ b/src/styles/website.css
@@ -21,6 +21,7 @@
   --header-link-height: 2em;
   --header-link-item-spacing: 0.5em;
   --post-contents-padding: 0.5em;
+  --meta-spacing: 0.25em;
 }
 
 /* Fonts */
@@ -234,9 +235,24 @@ article header div.post-meta {
   display: flex;
   align-items: center;
   padding: 0;
-  gap: 0.25em;
+  gap: var(--meta-spacing);
   color: var(--color-secondary);
   margin-bottom: -0.25em;
+}
+
+ul.tags {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+}
+
+ul.tags li {
+  display: inline-block;
+}
+
+ul.tags li:not(:last-child) {
+  margin-right: var(--meta-spacing);
 }
 
 /* Footnotes */
@@ -353,18 +369,6 @@ div.post-body > * {
 div.post-body > img.hero-image {
   margin: 0.5em 0;
   border: 0.25em solid var(--color);
-}
-
-ul.tags {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  display: inline-block;
-}
-
-ul.tags li {
-  display: inline-block;
-  margin-right: 0.25em;
 }
 
 .post-body h3 { --heading-level: 3; }
